fixed git misalign stuff

--- a/dna-tool/src/components/userview.css
+++ b/dna-tool/src/components/userview.css
@@ -175,5 +175,5 @@ body {
 }
 
 .more-button-hidden {
-  visbility: hidden;
+  visibility: hidden;
 }
